Converted SA 1.1-16 to new bilingual format.

--- a/01_agama/samyukta/01/SA1_6.md
+++ b/01_agama/samyukta/01/SA1_6.md
@@ -7,34 +7,41 @@ previous: SA1_5.html
 next: SA1_7.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 6 (3). Not Knowing
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（三） 不知</th>
+  <th class='en'>6 (3). Not Knowing</th>
+  <tr>
+    <td title='t99.2.1a28'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a29'>爾時，世尊告諸比丘： 「於色不知不明，不斷不離欲，則不能斷苦。 如是，受⋯想⋯行⋯識不知不明，不斷不離欲，則不能斷苦。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and doesn’t stop or become free of desire for it, it’s not possible to stop suffering. Thus, when one doesn’t know or understand feeling … conception … volition … awareness and doesn’t stop or become free of desire for it, it’s not possible to stop suffering.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1b2'>「諸比丘，於色若知若明，若斷若離欲，則能斷苦。 如是，受⋯想⋯行⋯識若知若明，若斷若離欲，則能堪任斷苦。」</td>
+    <td id='p3'>3. “Monks, if someone knows and understands form and stops and becomes free of desire for it, it’s possible to stop suffering. Thus, if someone knows and understands feeling … conception … volition … awareness and stops and becomes free of desire for it, it’s possible to end suffering.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1b5'>時，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand form and doesn’t stop or become free of desire for it, it’s not possible to stop suffering. Thus, when one doesn’t know or understand feeling … conception … volition … consciousness and doesn’t stop or become free of desire for it, it’s not possible to stop suffering.
-{:#p2}
+<hr/>
 
-3\. “Monks, if someone knows and understands form and stops and becomes free of desire for it, it’s possible to stop suffering. Thus, if someone knows and understands feeling … conception … volition … consciousness and stops and becomes free of desire for it, it’s possible to end suffering.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 3 in the <cite>Taisho</cite> edition and no. 6 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001a28" target="_blank">T99.2.1a28-b5</a>). This and the next three <em>sūtra</em>s are parallel with <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a> and <a href="../02/sa2_6.html" target="_blank">SĀ 2.6</a>.<br/>
+The first two keywords in this <em>sūtra</em>, “knowing” (知) and understanding” (明), are more significant in the Pali parallel: “directly knowing” (<em>abhijāna</em>) and “fully understanding” (<em>parijāna</em>). In the Theravāda commentary, the first term refers to the knowledge of both a trainee and an <em>arhat</em>, while the second refers only to an <em>arhat</em>’s knowledge. Here, the C. doesn’t indicate these technical readings as I would expect with modifiers, and I’ve translated it in a straightforward way. The verbs may have been slightly different synonyms in the Prakrit original.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 23 February 2024</p>
 
-### Notes
-
-1. {:#n1} This and the next three <em>sūtra</em>s are parallel with <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a> and <a href="../02/sa2_6.html" target="_blank">SĀ 2.6</a>.<br/>
-The first two keywords in this <em>sūtra</em>, “knowing” (知) and understanding” (明), are more significant in the Pali parallel: “directly knowing” (<em>abhijāna</em>) and “fully understanding” (<em>parijāna</em>). In the Theravāda commentary, the first term refers to the knowledge of both a trainee and an <em>arhat</em>, while the second refers only to an <em>arhat</em>’s knowledge. Here, the C. doesn’t indicate these technical readings as I would expect with modifiers, and I’ve translated it in a straightforward way. The verbs may have been slightly different synonyms in the Prakrit original. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 December 2023
-{: .revised}
-
----
+<hr/>
