--- a/01_agama/samyukta/01/SA1_8.md
+++ b/01_agama/samyukta/01/SA1_8.md
@@ -7,34 +7,49 @@ previous: SA1_7.html
 next: SA1_9.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 8 (5). Not Knowing (3)
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（五） 不知</th>
+  <th class='en'>8 (5). Not Knowing (3)</th>
+  <tr>
+    <td title='t99.2.1b16'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1b17'>爾時，世尊告諸比丘： 「於色愛喜者，則於苦愛喜。於苦愛喜者，則於苦不得解脫、不明、不離欲。如是受⋯想⋯行⋯識愛喜者，則愛喜苦。愛喜苦者，則於苦不得解脫。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one doesn’t know and understand form and doesn’t become free of desire for it, their mind isn’t liberated. Their mind not being liberated, they can’t stop suffering. Thus, when one doesn’t know and understand feeling … conception … volition … awareness and doesn’t become free of desire for it, their mind isn’t liberated, and then they can’t stop suffering.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1b27'>「諸比丘！於色不愛喜者，則不喜於苦。不喜於苦者，則於苦得解脫。如是受、想、行、識不愛喜者，則不喜於苦。不喜於苦者，則於苦得解脫。</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td title='t99.2.1b27'>「諸比丘，於色不知、不明、不離欲貪、心不解脫。貪心不解脫者，則不能斷苦。如是受、想、行、識，不知、不明、不離欲貪、心不解脫者，則不能斷苦。</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td title='t99.2.1b27'>「於色若知若明，若離欲貪，心得解脫者，則能斷苦。 如是受⋯想⋯行⋯識，若知、若明、若離欲貪、心得解脫者，則能斷苦。」</td>
+    <td id='p3'>3. “Monks, if someone knows and understands form and becomes free of desire for it, their mind is liberated, and then they can stop suffering. Thus, if someone knows and understands feeling … conception … volition … awareness and becomes free of desire for it, their mind is liberated, and then they can stop suffering.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1c1'>時，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know and understand form and doesn’t become free of desire for it, their mind isn’t liberated. Their mind not being liberated, they can’t stop suffering. Thus, when one doesn’t know and understand feeling … conception … volition … consciousness and doesn’t become free of desire for it, their mind isn’t liberated, and then they can’t stop suffering.
-{:#p2}
+<hr/>
 
-3\. “Monks, if someone knows and understands form and becomes free of desire for it, their mind is liberated, and then they can stop suffering. Thus, if someone knows and understands feeling … conception … volition … consciousness and becomes free of desire for it, their mind is liberated, and then they can stop suffering.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 5 in the <cite>Taisho</cite> edition and no. 8 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001b16" target="_blank">T99.2.1b16-c1</a>). It’s a variant of the previous two and next <em>sūtra</em>. As a group, they are parallel to <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a>, and this <em>sūtra</em> is parallel with <a href="../02/SA2_8.html" target="_blank">SĀ 2.8</a>.<br/>
+The <cite>Taisho</cite> version of this <em>sūtra</em> copies content from <a href="SA1_10.html" target="_blank">SĀ 1.10 (7)</a> into its beginning. I’ve followed Yinshun’s lead in ignoring this material as spurious on two grounds. First, the <em>uddāna</em> verse for this group of <em>sūtra</em>s only mentions one <em>sūtra</em> on delight. Second, <a href="../02/SA2_8.html" target="_blank">SĀ 2.8</a> would be a strong parallel if we deleted the added material. This would then maintain the pattern of SĀ 1.1-10 corresponding closely to SĀ 2.1-10. The most likely explanation is that a copyist lost their place and copied a few lines from the wrong <em>sūtra</em>.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 23 February 2024</p>
 
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is a variant of the previous two and next <em>sūtra</em>. As a group, they are parallel to <a href="https://suttacentral.net/sn22.24" target="_blank">SN 22.24</a>, and this <em>sūtra</em> is parallel with <a href="../02/SA2_8.html" target="_blank">SĀ 2.8</a>.<br/>
-The <cite>Taisho</cite> version of this <em>sūtra</em> copies content from <a href="SA1_10.html" target="_blank">SĀ 1.10 (7)</a> into its beginning. I’ve followed Yinshun’s lead in ignoring this material as spurious on two grounds. First, the summary verse for this group of <em>sūtra</em>s only mentions one <em>sūtra</em> on delight. Second, <a href="../02/SA2_8.html" target="_blank">SĀ 2.8</a> would be a strong parallel if we deleted the added material. This would then maintain the pattern of SĀ 1.1-10 corresponding closely to SĀ 2.1-10. It would appear to be a case of a copyist losing their place and copying a few lines from the wrong <em>sūtra</em>. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 December 2023
-{: .revised}
-
----
+<hr/>
