--- a/01_agama/samyukta/01/SA1_1-4.md
+++ b/01_agama/samyukta/01/SA1_1-4.md
@@ -7,43 +7,53 @@ previous: index.html
 next: SA1_5.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 1-4 (1). Impermanent, Painful, Empty, and Not Self
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（一） 無常、苦、空、非我</th>
+  <th class='en'>1-4 (1). Impermanent, Painful, Empty, and Not Self</th>
+  <tr>
+    <td title='t99.2.1a6'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a7'>爾時，世尊告諸比丘： 「當觀色無常。 如是觀者則為正觀。 正觀者則生厭離。 厭離者喜、貪盡。 喜、貪盡者說心解脫。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “You should observe that form is [1] impermanent … [2] painful … [3] empty … [4] not self. Observing it in this way is right view.<sup id="ref2"><a href="#n2">2</a></sup> Correctly observing it gives rise to disillusionment. When someone is disillusioned, delight and greed end. When delight and greed end, I say one’s mind is liberated.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a9'>「如是觀受⋯想⋯行⋯識無常。 如是觀者則為正觀。 正觀者則生厭離。 厭離者喜、貪盡。 喜、貪盡者說心解脫。</td>
+    <td id='p3'>3. “Thus observe that feeling … conception … volition … awareness is impermanent … painful … empty … not self. Observing it in this way is right view. Correctly observing it gives rise to disillusionment. When someone is disillusioned, delight and greed end. When delight and greed end, I say one’s mind is liberated.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a12'>「如是，比丘，心解脫者，若欲自證，則能自證： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」</td>
+    <td id='p4'>4. “In this way, monks, someone who wants to realize the mind’s liberation for themselves can realize: ‘My births have been ended, the religious practice<sup id="ref3"><a href="#n3">3</a></sup> has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a14'>（如「觀⋯無常」、「苦」、「空」、「非我」亦復如是。）</td>
+    <td><em>Like “observe … impermanent,” “pain,” “emptiness,” and “not self” are taught in the same way.</em></td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a15'>時，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “You should observe that form is [1] impermanent … [2] painful … [3] empty … [4] not self. Observing it in this way is right view.[\[2\]](#n2){:#ref2} Correctly observing it gives rise to disillusionment. When someone is disillusioned, delight and greed end. When delight and greed end, I say one’s mind is liberated.
-{:#p2}
+<hr/>
 
-3\. “Thus observe that feeling … conception … volition … consciousness is [1] impermanent … [2] painful … [3] empty … [4] not self. Observing it in this way is right view. Correctly observing it gives rise to disillusionment. When someone is disillusioned, delight and greed end. When delight and greed end, I say one’s mind is liberated.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “In this way, monks, someone who wants to realize the mind’s liberation for themselves can realize: ‘My births have been ended, the religious practice[\[3\]](#n3){:#ref3} has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
-{:#p4}
+<ol>
+<li id="n1">These four <em>sūtra</em>s (SĀ 1.1-4) are  <em>sūtra</em> no. 1 in the <cite>Taisho</cite> edition (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001a06" target="_blank">T99.2.1a6-15</a>). Close Pali parallels include <a href="https://suttacentral.net/sn22.12" target="_blank">SN 22.12</a> and <a href="https://suttacentral.net/sn22.51" target="_blank">SN 22.51</a>.<br/>
+These <em>sūtra</em>s follow the same template, the only difference being the substitution of the keywords “impermanent,” “painful,” “empty,” and “not self.” Compare these <em>sūtra</em>s with <a href="../02/SA2_1.html" target="_blank">SĀ 2.1-4 (188)</a>, which apply the same template to the six sense fields (i.e., vision, hearing, smelling, taste, tactile feelings, and mental perceptions). This parallelism is consistent between SĀ 1.1-10 and SĀ 2.1-10.<br/>
+The Chinese translator(s) in SĀ 2.1-4 employed clearer grammatical structures and vocabulary choices than they did here. E.g., 觀察 is clearer than 觀 for the meaning “to observe.” 正見 appears more correct than 正觀 when we compare these <em>sūtra</em>s with their Pali counterparts. And dependent clauses are used instead of topicalized subjects to express the progression from right observation to liberation. Looking beyond these minor differences, the source texts for SĀ 1.1-4 and SĀ 2.1-4 appear to be identical or nearly so.<br/>
+The sudden change from one style of translation to another may indicate that either different translators worked on the project at different times, or perhaps there was a hiatus during which the same translator’s style changed.[<a href="#ref1">back</a>]</li>
+<li id="n2"><em>right view</em>. Yinshun amends “correct observation” (正觀) to “right view” (正見) in this <em>sūtra</em>, citing the parallel passages at <a href="https://suttacentral.net/sn22.51" target="_blank">SN 22.51</a> and <a href="../02/SA2_1-4.html" target="_blank">SĀ 2.1-4</a>. I’ve followed his suggestion here and below.[<a href="#ref2">back</a>]</li>
+<li id="n3"><em>religious practice</em>. C. 梵行, G. <em>braṃmayiya</em>, P. <em>brahmacariya</em>, S. <em>brahmacarya</em>. This term is typically translated lit. to C. as “Brahma” (梵) “practice” (行). It usu. refers generally to living as a religious person toward a spiritual goal, but it also specifically meant the celebate life. This practice of celebacy is probably why it was called the “Brahma” practice: Buddhists held that sexuality and gender didn’t exist in the Brahma heavens and above (see e.g. <a href="../../dirgha/DA_30-8.html#p66" target="_blank">DĀ 30, Chapter 8</a>). To practice celebacy was to emulate the gods above the desire realm.[<a href="#ref3">back</a>]</li>
+</ol>
+<hr/>
 
-<em>Like “observe … impermanent,” “pain,” “emptiness,” and “not self” are taught in the same way.</em>
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 23 February 2024</p>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
-
----
-
-### Notes
-
-1. {:#n1} These four <em>sūtra</em>s (SĀ 1.1-4) are  <em>sūtra</em> no. 1 in the <cite>Taisho</cite> edition (T99.2.1a6). Close Pali parallels include <a href="https://suttacentral.net/sn22.12" target="_blank">SN 22.12</a> and <a href="https://suttacentral.net/sn22.51" target="_blank">SN 22.51</a>.<br/>
-These <em>sūtra</em>s follow the same template with the keywords “impermanent,” “painful,” “empty,” and “not self.” Compare these <em>sūtra</em>s with <a href="../02/SA2_1.html" target="_blank">SĀ 2.1-4 (188)</a>, which apply the same template to the six sense fields (i.e., vision, hearing, smelling, taste, tactile feelings, and mental perceptions). This parallelism continues between SĀ 1.1-10 and SĀ 2.1-10.<br/>
-The Chinese translators there employs clearer grammatical structures and vocabulary choices than they do here. E.g., 觀察 is clearer than 觀 for the meaning “to observe.” 正見 appear more correct than 正觀 when we compare these <em>sūtra</em>s with their Pali counterparts. And dependent clauses are used instead of topicalized subjects. Looking past these minor differences, the source texts appear to have been identical templates.<br/>
-These stylistic differences indicate that either different translators worked on the project at different times, or perhaps there was a hiatus during which the same translator’s style changed. [\[back\]](#ref1)
-2. {:#n2} <em>right view</em>. Yinshun amends “correct observation” (正觀) to “right view” (正見) in this <em>sūtra</em>, citing the parallel passages at <a href="https://suttacentral.net/sn22.51" target="_blank">SN 22.51</a> and <a href="../02/SA2_1-4.html" target="_blank">SĀ 2.1-4</a>. I’ve followed his suggestion here and below. [\[back\]](#ref2)
-3. {:#n3} <em>religious practice</em>. C. 梵行, G. <em>braṃmayiya</em>, P. <em>brahmacariya</em>, S. <em>brahmacarya</em>. This term is typically translated lit. to C. as “Brahma” (梵) “practice” (行). It usu. refers generally to living as a religious person toward a spiritual goal, but it also specifically meant the celebate life. This practice of celebacy is probably why it was called the “Brahma” practice: Buddhists held that sexuality and gender didn’t exist in the Brahma heavens and above (cf. <a href="../../dirgha/DA_30-8.html#p66" target="_blank">DĀ 30, Chapter 8</a>, where this topic is discussed). To practice celebacy was to emulate the gods above the desire realm. [\[back\]](#ref3)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 December 2023
-{: .revised}
-
----
+<hr/>
