--- a/01_agama/samyukta/01/SA1_10.md
+++ b/01_agama/samyukta/01/SA1_10.md
@@ -7,40 +7,58 @@ previous: SA1_9.html
 next: SA1_11-14.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 10 (7). Delighting in Form
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（七） 於色喜樂</th>
+  <th class='en'>10 (7). Delighting in Form</th>
+  <tr>
+    <td title='t99.2.1c11'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1c12'>爾時，世尊告諸比丘： 「於色愛喜者則於苦愛喜。 於苦愛喜者則於苦不得解脫。 如是，受⋯想⋯行⋯識愛喜者則愛喜苦。 愛喜苦者則於苦不得解脫。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “When one delights in form, they delight in suffering. When one delights in suffering, they can’t be liberated from suffering. Thus, when one delights in feeling … conception … volition … awareness, they delight in suffering. When one delights in suffering, they can’t be liberated from suffering.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1c15'>「諸比丘，於色不愛喜者則不喜於苦。 不喜於苦者則於苦得解脫。 如是，受⋯想⋯行⋯識不愛喜者則不喜於苦。 不喜於苦者則於苦得解脫。」</td>
+    <td id='p3'>3. “Monks, when someone doesn’t delight in form, they don’t delight in suffering. When someone doesn’t delight in suffering, they can be liberated from suffering. Thus, when someone doesn’t delight in feeling … conception … volition … awareness, they don’t delight in suffering. When someone doesn’t delight in suffering, they can be liberated from suffering.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1c19'>時，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+<tr>
+  <td title='t99.2.1c20'></td>
+  <td class='subheading'>Summary Verse</td>
+</tr>
+<tr>
+  <td title='t99.2.1c20'><ul class='verse'>
+    <li>無常及苦、空<br/>
+    非我、正思惟<br/>
+    無知等四種<br/>
+    及於色喜樂</li>
+  </ul></td>
+  <td><ul class='verse'>
+    <li>[1] Impermanent, [2] painful, [3] empty,<br/>
+    And [4] not self; [5] correctly contemplated;<br/>
+    [6-9] Four ways of not knowing;<br/>
+    And [10] delighting in form.</li>
+  </ul></td>
+</tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “When one delights in form, they delight in suffering. When one delights in suffering, they can’t be liberated from suffering. Thus, when one delights in feeling … conception … volition … consciousness, they delight in suffering. When one delights in suffering, they can’t be liberated from suffering.
-{:#p2}
+<hr/>
 
-3\. “Monks, when someone doesn’t delight in form, they don’t delight in suffering. When someone doesn’t delight in suffering, they can be liberated from suffering. Thus, when someone doesn’t delight in feeling … conception … volition … consciousness, they don’t delight in suffering. When someone doesn’t delight in suffering, they can be liberated from suffering.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 7 in the <cite>Taisho</cite> edition and no. 10 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001c11" target="_blank">T99.2.1c11-21</a>). It’s parallel with <a href="https://suttacentral.net/sn22.29" target="_blank">SN 22.29</a> and <a href="../02/SA2_10.html" target="_blank">SĀ 2.10</a>.[<a href="#ref1">back</a>]</li>
+</ol>
+<hr/>
 
-#### Summary Verse
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 23 February 2024</p>
 
-* {:.verse}[1] Impermanent, [2] painful, [3] empty,<br/>
-And [4] not self; [5] correctly contemplated;<br/>
-[6-9] Four ways of not knowing;<br/>
-And [10] delighting in form.
-
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.29" target="_blank">SN 22.29</a> and <a href="../02/SA2_10.html" target="_blank">SĀ 2.10</a>. [\[back\]](#ref1)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 December 2023
-{: .revised}
-
----
+<hr/>
