--- a/01_agama/samyukta/01/SA1_11-14.md
+++ b/01_agama/samyukta/01/SA1_11-14.md
@@ -7,34 +7,41 @@ previous: SA1_10.html
 next: SA1_15.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 11-14 (8). The Past Is Impermanent, Painful, Empty, and Not Self
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（八） 過去四種説</th>
+  <th class='en'>11-14 (8). The Present Is Impermanent, Painful, Empty, and Not Self</th>
+  <tr>
+    <td title='t99.2.1c22'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1c23'>爾時，世尊告諸比丘： 「過去、未來色無常，況現在色？ 聖弟子如是觀者不顧過去色，不欲未來色。 於現在色厭、離欲、正向滅盡。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Past and future form are [11] impermanent … [12] painful … [13] empty … [14] not self, so why wouldn’t that be for present form? Noble disciples who observe them in this way don’t look back to past form or wish for future form. Regarding present form, they become disillusioned, free of desire, and headed straight to its cessation.<sup id="ref2"><a href="#n2">2</a></sup></td>
+  </tr>
+  <tr>
+    <td title='t99.2.1c26'>「如是，過去、未來受⋯想⋯行⋯識無常，況現在識？ 聖弟子如是觀者不顧過去識，不欣未來識。 於現在識厭、離欲、正向滅盡。」</td>
+    <td id='p3'>3. “Thus, past and future feeling … conception … volition … awareness are impermanent … painful … empty … not self, so why wouldn’t that be for present awareness? Noble disciples who observe them in this way don’t look back to past awareness or wish for future awareness. Regarding present awareness, they become disillusioned, free of desire, and headed straight to its cessation.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1c29'>時，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Past and future form are [11] impermanent … [12] painful … [13] empty … [14] not self, so why wouldn’t that be for present form? Noble disciples who observe them in this way don’t look back to past form or wish for future form. Regarding present form, they become disillusioned, free of desire, and headed straight to its cessation.[\[2\]](#n2){:#ref2}
-{:#p2}
+<hr/>
 
-3\. “Thus, past and future feeling … conception … volition … consciousness are [11] impermanent … [12] painful … [13] empty … [14] not self, so why wouldn’t that be for present consciousness? Noble disciples who observe them in this way don’t look back to past consciousness or wish for future consciousness. Regarding present consciousness, they become disillusioned, free of desire, and headed straight to its cessation.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 8 in the <cite>Taisho</cite> edition and nos. 11 to 14 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001c22" target="_blank">T99.2.1c22-2a1</a>). This group of <em>sūtra</em>s is parallel with <a href="https://suttacentral.net/sn22.9" target="_blank">SN 22.9</a>-<a href="https://suttacentral.net/sn22.11" target="_blank">11</a>. The Pali lacks a direct parallel for the <em>sūtra</em> on the emptiness of the aggregates (<a href="SA1_13.html" target="_blank">SĀ 1.13</a>), which is a general pattern in SN. The Theravādins didn’t usu. include emptiness in the standard list of negative aspects attributed to conditioned things that arise and perish.[<a href="#ref1">back</a>]</li>
+<li id="n2"><em>headed straight to</em>. C. 正向. Here, 正 is likely read as “exact” rather than “correct,” and 向 means a heading or facing. Together, they mean “headed directly toward.” The Pali parallel here appears to be the past particle P. <em>paṭipanna</em> (= G. <em>paḍipaṃna</em>, S. <em>pratipanna</em>), but there it applies to all three steps rather than just the last one (i.e., cessation). Both P. <em>paṭipanna</em>  and S. <em>pratipanna</em> can mean “entered,” “arrived,” or “approached,” which generally matches the C. reading.[<a href="#ref2">back</a>]</li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 23 February 2024</p>
 
-### Notes
-
-1. {:#n1} This group of <em>sūtra</em>s are parallel with <a href="https://suttacentral.net/sn22.9" target="_blank">SN 22.9</a>-<a href="https://suttacentral.net/sn22.11" target="_blank">11</a>. The Pali lacks a direct parallel for the <em>sūtra</em> on the emptiness of the aggregates (<a href="SA1_13.html" target="_blank">SĀ 1.13</a>), which is a general pattern in SN. The Theravādins didn’t include emptiness in the standard list of negative aspects attributed to conditioned things that arise and perish. [\[back\]](#ref1)
-2. {:#n2} <em>headed straight to</em>. C. 正向. Here, 正 is likely read as “exact” rather than “correct,” and 向 means a heading or facing. Together, they mean “headed directly toward.” The Pali parallel here appears to be the past particle P. <em>paṭipanna</em> (= G. <em>paḍipaṃna</em>, S. <em>pratipanna</em>), but there it applies to all three steps rather than just the last one (i.e., cessation). Both P. <em>paṭipanna</em>  and S. <em>pratipanna</em> can mean “entered,” “arrived,” or “approached,” which generally matches the C. reading. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 19 December 2023
-{: .revised}
-
----
+<hr/>
