--- a/01_agama/samyukta/01/SA1_16.md
+++ b/01_agama/samyukta/01/SA1_16.md
@@ -7,34 +7,41 @@ previous: SA1_15.html
 next: SA1_17.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 16 (10). Liberation
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（一〇） 解脱</th>
+  <th class='en'>16 (10). Teaching Liberation</th>
+  <tr>
+    <td title='t99.2.2a12'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2a13'>爾時，世尊告諸比丘： 「色無常。 無常即苦，苦即非我，非我者即非我所。 如是觀者名真實觀。 如是，受⋯想⋯行⋯識無常，無常即苦，苦即非我，非我者即非我所。 如是觀者名真實觀。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called a true observation. Thus, feeling … conception … volition … awareness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called true observation.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2a17'>「聖弟子如是觀者於色解脫⋯ 於受⋯想⋯行⋯識解脫。 我說是等解脫於生、老、病、死、憂、悲、苦、惱。」</td>
+    <td id='p3'>3. “Noble disciples who observe it in this way are liberated from form … liberated from sensation … conception … volition … awareness. I say that this is liberation<sup id="ref2"><a href="#n2">2</a></sup> from birth, old age, illness, death, grief, sorrow, pain, and trouble.”</td>
+  </tr>
+  <tr>
+    <td title='t99.2.2a19'>時，諸比丘聞佛所說，歡喜奉行。</td>
+    <td id='p4'>4. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called a true observation. Thus, feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, something painful is not self, and something that’s not self doesn’t belong to self, either. Observing it in this way is called true observation.
-{:#p2}
+<hr/>
 
-3\. “Noble disciples who observe it in this way are liberated from form … liberated from sensation … conception … volition … consciousness. I say that this is liberation[\[2\]](#n2){:#ref2} from birth, old age, illness, death, grief, sorrow, pain, and trouble.”
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 10 in the <cite>Taisho</cite> edition and no. 16 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0002a12" target="_blank">T99.2.2a12-20</a>). This <em>sūtra</em> is a variant of the previous one (<a href="SA1_15.html" target="_blank">SĀ 1.15</a>), and both are parallel with <a href="https://suttacentral.net/sn22.15" target="_blank">SN 22.15</a> and similar to <a href="https://suttacentral.net/sn22.16" target="_blank">SN 22.16-17</a>. See the notes to <a href="SA1_15.html" target="_blank">SĀ 1.15</a> for more discussion of these parallels.[<a href="#ref1">back</a>]</li>
+<li id="n2"><em>this is liberation</em>. C. 是等解脫. The parallel passage in <a href="SA1_18.html" target="_blank">SĀ 1.18</a> reads 是等<strong>為</strong>解脫, which makes a bit more sense than 等解脫. It means that liberation from the five aggregates (是等, “these things”) is liberation from suffering. As the <cite>Taisho</cite> reads here, I would take 等解脫 to mean “complete” or “thorough liberation” (S. *<em>sama</em> or <em>sam-</em> + <em>(vi)mokṣa</em>?). But I think this is a case of inattentive copying leading to minor omissions. In this case, 為 was lost.[<a href="#ref2">back</a>]</li>
+</ol>
+<hr/>
 
----
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 23 February 2024</p>
 
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is a variant of the previous one (<a href="SA1_15.html" target="_blank">SĀ 1.15</a>), and both are parallel with <a href="https://suttacentral.net/sn22.15" target="_blank">SN 22.15</a> and similar to <a href="https://suttacentral.net/sn22.16" target="_blank">SN 22.16-17</a>. See the notes to SĀ 1.15 for more discussion of these parallels. [\[back\]](#ref1)
-2. {:#n2} <em>this is liberation</em>. C. 是等解脫. The parallel passage in <a href="SA1_18.html" target="_blank">SĀ 1.18</a> reads 是等<strong>為</strong>解脫, which makes a bit more sense than 等解脫. It means that liberation from the five aggregates (是等, “these things”) is liberation from suffering. As the <cite>Taisho</cite> reads here, I would take 等解脫 to mean “complete” or “thorough liberation” (S. *<em>sama</em> or <em>sam-</em> + (vi)mokṣa</em>?). But I think this is a case of inattentive copying leading to minor omissions. In this case, 為 was lost. [\[back\]](#ref2)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 19 December 2023
-{: .revised}
-
----
+<hr/>
