--- a/01_agama/samyukta/01/SA1_5.md
+++ b/01_agama/samyukta/01/SA1_5.md
@@ -7,38 +7,50 @@ previous: SA1_1-4.html
 next: SA1_6.html
 ---
 
-# [The Related Discourses](../index.html)
-## [1. The Aggregates](index.html)
-### 5 (2). Correctly Contemplated
+<h1><a href='(../index.html)'>The Related Discourses</a></h1>
+<h2><a href='index.html'>1. The Aggregates</a></h2>
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
-{:#p1}
+<table class="trans">
+  <th class='ch'>（二） 正思惟</th>
+  <th class='en'>5 (2). Correctly Contemplated</th>
+  <tr>
+    <td title='t99.2.1a16'>如是我聞： 一時，佛住舍衛國、祇樹、給孤獨園。</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a17'>爾時，世尊告諸比丘： 「於色當正思惟，觀色無常，如實知。 所以者何？ 比丘，於色正思惟，觀色無常，如實知者，於色欲貪斷。 欲貪斷者，說心解脫。</td>
+    <td id='p2'>2. It was then that the Bhagavān addressed the monks, “One should correctly contemplate form,<sup id="ref2"><a href="#n2">2</a></sup> observe that form is impermanent, and truly know it. Why is that? Monks, when someone correctly contemplates form, observes it to be impermanent, and truly knows it, they stop desire and greed for form. When someone stops desire and greed, I say their mind is liberated.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a20'>「如是受⋯想⋯行⋯識當正思惟，觀識無常如實知。 所以者何？ 於識正思惟，觀識無常者，則於識欲貪斷。 欲貪斷者，說心解脫。</td>
+    <td id='p3'>3. “Thus, one should correctly contemplate feeling … conception … volition … awareness, observe that awareness is impermanent, and truly know it. Why is that? When someone correctly contemplates awareness, observes it to be impermanent[, and truly knows it], they stop desire and greed for awareness. When someone stops desire and greed, I say their mind is liberated.</td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a23'>「如是心解脫者，若欲自證，則能自證： 『我生已盡，梵行已立，所作已作。 自知不受後有。』」 </td>
+    <td id='p4'>4. “In this way, someone who wants to realize the mind’s liberation for themselves can realize: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”<sup id="ref3"><a href="#n3">3</a></sup></td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a14'>(如觀無常，苦、空、非我亦復如是。)</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td title='t99.2.1a26'>時，諸比丘聞佛所說歡喜，奉行。</td>
+    <td id='p5'>5. When the monks heard what the Buddha taught, they rejoiced and approved.</td>
+  </tr>
+</table>
 
-2\. It was then that the Bhagavān addressed the monks, “One should correctly contemplate form,[\[2\]](#n2){:#ref2} observe that form is impermanent, and truly know it. Why is that? Monks, when someone correctly contemplates form, observes it to be impermanent, and truly knows it, they stop desire and greed for form. When someone stops desire and greed, I say their mind is liberated.
-{:#p2}
+<hr/>
 
-3\. “Thus, one should correctly contemplate feeling … conception … volition … consciousness, observe that consciousness is impermanent, and truly know it. Why is that? When someone correctly contemplates consciousness, observes it to be impermanent[, and truly knows it], they stop desire and greed for consciousness. When someone stops desire and greed, I say their mind is liberated.
-{:#p3}
+<h3 id="notes">Notes</h3>
 
-4\. “In this way, someone who wants to realize the mind’s liberation for themselves can realize: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”[\[3\]](#n3){:#ref3}
-{:#p4}
+<ol>
+<li id="n1">This is <em>sūtra</em> no. 2 in the <cite>Taisho</cite> edition and no. 5 in Yinshun (<a href="https://cbetaonline.dila.edu.tw/zh/T02n0099_p0001a16" target="_blank">T99.2.1a16-27</a>). It’s parallel with <a href="https://suttacentral.net/sn22.52" target="_blank">SN 22.52</a> and <a href="../02/sa2_5.html" target="_blank">SĀ 2.5</a>.[<a href="#ref1">back</a>]</li>
+<li id="n2"><em>correctly contemplate</em>. C. 正思惟, P. <em>yoniso manasi karotha</em>. In SĀ, the term 正思惟 appears to translate a Prakrit parallel to <em>yoniso manasi karoti</em> in Pali <em>sutta</em>s, meaning “correctly, properly” (正) and “to contemplate, think about, ponder” (思惟). In Pali, <em>manasi</em> is a noun in the locative case with a general action verb applied to it, resulting is something like “wisely apply to the mind.” The terms in both languages describe rational or logical thought which arrives at a correct conclusion, rather than meditation. I’ve translated the C. literally.[<a href="#ref2">back</a>]</li>
+<li id="n3">The <cite>Taisho</cite> edition includes a note describing variant <em>sūtra</em>s that’s identical to the one found in <a href="sa1_1.html" target="_blank">SĀ 1.1</a>; however, these variants would be inconsistent with the <em>uddāna</em> verse at the end of <a href="sa1_10.html" target="_blank">SĀ 1.10</a>. The parallel <em>sūtra</em> at <a href="../02/sa2_5.html" target="_blank">SĀ 2.5</a> doesn’t have these variants, either. I have followed Yinshun’s lead in ignoring this variant note.[<a href="#ref3">back</a>]</li>
+</ol>
+<hr/>
 
-5\. When the monks heard what the Buddha taught, they rejoiced and approved.
-{:#p5}
+<p class="translator">Translator: Charles Patton</p>
+<p class='revised'>Last Revised: 23 February 2024</p>
 
----
-
-### Notes
-
-1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.52" target="_blank">SN 22.52</a> and <a href="../02/sa2_5.html" target="_blank">SĀ 2.5</a>. [\[back\]](#ref1)
-2. {:#n2} <em>correctly contemplate</em>. C. 正思惟, P. <em>yoniso manasi karotha</em>. In SĀ, the term 正思惟 appears to translate a Prakrit parallel to <em>yoniso manasi karoti</em> in Pali <em>sutta</em>s, meaning (正, “correctly, properly”) and v. (思惟, “contemplate, think about, ponder”). In Pali, <em>manasi</em> is a noun in the locative case with a general action verb applied to it, resulting is something like “wisely apply the mind.” The terms in both languages describe rational or logical thought which arrives at the correct conclusion, rather than meditation. I’ve translated the C. literally. [\[back\]](#ref2)
-3. {:#n3} The <cite>Taisho</cite> edition includes a note describing variant <em>sūtra</em>s that’s identical to the one found in <a href="sa1_1.html" target="_blank">SĀ 1.1</a>; however, these variants would be inconsistent with the summary verse at the end of <a href="sa1_10.html" target="_blank">SĀ 1.10</a>, and the parallel <em>sūtra</em> at <a href="../02/sa2_5.html" target="_blank">SĀ 2.5</a> doesn’t have these variants. I have followed Yinshun’s lead in ignoring this variant note. [\[back\]](#ref3)
-
----
-
-Translator: Charles Patton
-{: .translator}
-Last Revised: 10 December 2023
-{: .revised}
-
----
+<hr/>
